# flutter_puzzle_editor

./: CONTRIBUTING.md  ComicsViewer.podspec  LICENSE  README.md  README_RU.md  ffigen.yaml  package.json  pubspec.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle
example/: README.md  app.json  metro.config.js  package.json  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/src/: App.tsx
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: ComicsViewerView.h  ComicsViewerView.mm  ComicsViewerViewManager.m  ComicsViewerViewManager.swift
lib/: editor.dart  editor_bindings_generated.dart
linux/: CMakeLists.txt
macos/: editor.podspec
macos/Classes/: editor.c
native/: Comics.sln
native/Comics.Core/: Comics.Core.csproj  packages.config
native/Comics.Core/DAL/: Db.cs
native/Comics.Core/Properties/: AssemblyInfo.cs
native/Comics.Core/Utils/: EpochDateTimeConverter.cs  Extensions.cs  ImageMagick.cs  ImageManager.cs  PlatformTypes.cs  PushManager.cs  WebConfig.cs
native/Comics.Editor/: App.config  App.xaml  App.xaml.cs  Comics.Editor.csproj  packages.config
native/Comics.Editor/Models/: AlphaAnim.cs  (+12 more)
native/Comics.Web/: Comics.Web.csproj  Global.asax  Global.asax.cs  Web.Live.config  Web.config  packages.config
src/: CMakeLists.txt  ComicsViewerView.native.tsx  ComicsViewerView.tsx  ComicsViewerViewNativeComponent.ts  editor.c  index.tsx
windows/: CMakeLists.txt
(+207 files in other folders)
